# bashellit

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  package.json  pnpm-lock.yaml  snapcraft.yaml  tailwind.css  vite.config.js
assets/: main.css
src/: App.css  App.jsx  main.jsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/helpers/: bash_utils.rs  file_manager.rs  file_picker.rs  launch_shell.rs  mod.rs  shell_utils.rs  state_manager.rs
src-tauri/src/os_info/: check_os_infos.rs  mod.rs
src-tauri/src/state_management/: mod.rs  sidebar_state.rs  upper_tabbar.rs
src-tauri/src/store/: mod.rs  theme_store.rs
src/Data/: MainPageData.jsx
src/components/: Editor.jsx  ErrorOs.jsx  GitHubHint.jsx  HighlightedLine.jsx  Icons.jsx  ImportBashFile.jsx  LaunchShell.jsx  Loader.jsx  Settings.jsx  SettingsComponent.jsx  SideBar.jsx  Sidebar.jsx  Toast.jsx  UpperBar.jsx  UpperTabBar.jsx  editor_component.rs  loader_component.rs  mod.rs  settings_component.rs  sidebar_component.rs  syntax_highlighter.rs  upper_bar_component.rs
src/context/: FileContext.jsx  ThemeContext.jsx
src/helpers/: formatter.rs  mod.rs  shell.rs
src/icons/: app_icons.rs  mod.rs
