[package]
name = "bashellit"
version = "0.1.0"
description = "A Tauri App"
authors = ["Cyprien"]
edition = "2021"


[lib]
name = "bashellit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-store = "2.4.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-upload = "2.4.0"
tauri-plugin-shell = "2"

