[package]
name = "bashellit"
version = "0.1.0"
description = "A small editor for writing scripts in Bash."
authors = ["Cyprien"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bashellit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-fs = "2.4.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
syntect = "5.3.0"
